Fix the 1px gap between composited sticky and its container

Upon calculating the relative position between a composited sticky
element and its scroll container, we use EnclosingIntRect instead of
RoundedIntRect which causes a scroll offset mismatch between main and
cc if the relative position is non integer, e.g. float prepadding.

Bug: 693412
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ideab875d2d087b8fe97264d0bddbd7e2393f8e7f
Reviewed-on: https://chromium-review.googlesource.com/1183622
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Commit-Queue: Yi Gu <yigu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584884}
Former-commit-id: 20c11c9492d799080819ff38696f09b2102211f6